<resources>
    <string name="app_name">Logbook OCR</string>
    <string name="content_desc_application_logo">Application Logo</string>
    <string name="login_title">Logbook OCR </string>
    <string name="login_hint_password">Password</string>
    <string name="login_hint_username">Username</string>
    <string name="login_btnForget">Forget Username or Password</string>
    <string name="login_btnLogin">Login</string>
    <string name="emailLogin_recovery_email">Recovery Email</string>
    <string name="emailLogin_hint_recovery_email">Enter recovery email</string>
    <string name="emailLogin_reminder">After you login using recovery email, the password will be reset to default password.<br />Please check your username and change your password after login.</string>
    <string name="main_btnViewAllData">View All Data</string>
    <string name="main_downloadDatabase">Download Database</string>
    <string name="main_manageAccount">Manage Account</string>
    <string name="main_hint_btnCamera">Take photo for OCR</string>
    <string name="settings_title_fastLogin">Fast Login</string>
    <string name="settings_summary_fastLogin">If this option is on, the user will login to the application automatically without entering username or password</string>
    <string name="settings_language">Language</string>
    <string-array name="languageList">
        <item>English</item>
        <item>Malay</item>
    </string-array>
    <string-array name="languageValues">
        <item>en-US</item>
        <item>ms</item>
    </string-array>
    <string name="action_settings">Settings</string>
    <string name="account_username_param">Username: %s</string>
    <string name="account_recoveryEmail_param">Recovery Email: %s</string>
    <string name="account_btnChangeProfile">Change Username Or Recovery Email</string>
    <string name="account_btnChangePassword">Change Password</string>
    <string name="dialog_changeProfile_title">Change User Profile</string>
    <string name="dialog_changeProfile_username">Username:</string>
    <string name="dialog_changeProfile_hint_username">Enter new username</string>
    <string name="dialog_changeProfile_recovery_email">Recovery Email:</string>
    <string name="dialog_changeProfile_hint_recovery_email">Enter new recovery email</string>
    <string name="btnUpdateProfile">Update Profile</string>
    <string name="btnCancel">Cancel</string>
    <string name="dialog_changePassword_title">Change Password</string>
    <string name="dialog_changePassword_current_password">Current Password:</string>
    <string name="dialog_changePassword_hint_current_password">Enter current password</string>
    <string name="dialog_changePassword_new_password">New Password:</string>
    <string name="dialog_changePassword_confirm_password">Confirm Password:</string>
    <string name="dialog_changePassword_hint_confirm_password">Reenter new password</string>
    <string name="btnUpdatePassword">Update Password</string>
    <string name="dialog_changePassword_hint_new_password">Enter new password</string>
    <string name="java_error_empty_username">Username can\'t be empty</string>
    <string name="java_error_empty_recovery_email">Please enter recovery email</string>
    <string name="java_error_invalid_email">Please enter a valid email address</string>
    <string name="java_error_wrong_current_password">The current password is wrong</string>
    <string name="java_error_empty_new_password">The new password cannot be empty</string>
    <string name="java_error_different_confirm_password">The confirm password is different from new password</string>
    <string name="java_message_enter_username_password">Please enter username and password</string>
    <string name="java_error_invalid_username_password">Invalid username and password!</string>
    <string name="java_message_press_again_to_exit">Press back again to exit</string>
    <string name="java_error_no_camera_app">No app in your phone can take picture</string>
    <string name="java_message_ocr_completion">OCR Completed</string>
    <string name="java_message_please_take_picture">Please take a picture</string>
    <string name="java_error_no_ocr_result">No text detected by OCR, please rescan</string>
    <string name="java_error_ocr_fail">OCR fail to be execute</string>
    <string name="java_message_ocr_no_text_detected">No text is detected</string>
    <string name="java_message_ocr_text_detected">OCR Result</string>
    <string name="java_error_fail_create_photo_file">Fail to create photo file</string>
    <string name="java_table_header_date">Date</string>
    <string name="java_table_header_time">Time</string>
    <string name="java_table_header_name">Name</string>
    <string name="java_table_header_temperature">Temperature</string>
    <string name="java_table_header_phone">Phone Number</string>
    <string name="java_table_header_remark">Remark</string>
    <string name="java_error_invalid_temperature">Invalid temperature range, the temperature must be between 35.0 and 42.0</string>
    <string name="java_error_non_numeric_input">The input must be a number</string>
    <string name="java_error_unable_to_save">Unable to save data because there is invalid data</string>
    <string name="java_error_invalid_date">Invalid date format, please follow date format dd-MM-YYYY</string>
    <string name="java_error_invalid_time">Invalid time format, please follow time format HH:mm</string>
    <string name="java_format_date" translatable="false">%d-%d-%d</string>
    <string name="java_format_time" translatable="false">%d:%s</string>
    <string name="java_error_invalid_temperature_range">The maximum temperature must be equal or larger than minimum temperature</string>
    <string name="java_message_filter_applied">Filter applied</string>
    <string name="java_table_header_ID">ID</string>
    <string name="java_error_no_temperature_input">Please enter temperature</string>
    <string name="java_error_pick_date">Please select a date using date picker</string>
    <string name="java_error_pick_time">Please select a time using time picker</string>
    <string name="java_message_update_success">Record successfully updated</string>
    <string name="java_message_insert_success">Insert data successful</string>
    <string name="java_message_export_success">The database exported successfully</string>
    <string name="java_error_export_fail">Export process fail</string>
    <string name="java_message_import_success">The database has been imported successfully</string>
    <string name="java_error_import_fail">Import process fail</string>
    <string name="java_error_database_not_exist">Database not yet exists</string>
    <string name="java_table_header_date_time">Date and Time</string>
    <string name="java_message_data_deleted">Data deleted</string>
    <string name="java_error_delete_fail">Fail to delete data, please try again</string>
    <string name="java_error_enter_date_time">Please enter all the date and time for the date time filter</string>
    <string name="java_message_password_reset_complete">Password has been reset to default password</string>
    <string name="java_error_invalid_malaysia_phone_number">Please enter a valid Malaysia phone number</string>
    <string name="java_error_not_sqlite_file">Selected file is not SQLIte file, please reselect file</string>
    <string name="result_original_photo">Original Photo</string>
    <string name="result_processed_photo">Processed Photo</string>
    <string name="result_rescan">Rescan</string>
    <string name="result_processing">Processing…</string>
    <string name="result_desc_imgPhoto">Photo taken by the user</string>
    <string name="result_btnAddRow">Add row</string>
    <string name="importExport_btnExport">Export</string>
    <string name="importExport_btnImport">Import</string>
    <string name="importExport_label_export">Export the database file to Download folder</string>
    <string name="importExport_label_import">Import the database file. The current database file will be deleted and replaced by new database file.</string>
    <string name="display_hint_etSearch">Enter name to search</string>
    <string name="display_desc_btnSearch">Search for text in text field</string>
    <string name="btnDelete">Delete</string>
    <string name="display_btnSetFilter">Set Filter</string>
    <string name="dialog_filter_title">Filter Settings</string>
    <string name="dialog_filter_cbEnable">Enable</string>
    <string name="dialog_filter_from">From:</string>
    <string name="dialog_filter_to">To:</string>
    <string name="dialog_filter_min">min</string>
    <string name="dialog_filter_max">max</string>
    <string name="dialog_filter_apply_filter">Apply Filter</string>
    <string name="dialog_filter_select_start_date_time">Select a starting date and time from pickers</string>
    <string name="dialog_filter_select_start_date">Select a starting date</string>
    <string name="dialog_filter_select_start_time">Select a starting time</string>
    <string name="dialog_filter_select_end_date_time">Select a ending date and time from pickers</string>
    <string name="dialog_filter_select_end_date">Select a ending date</string>
    <string name="dialog_filter_select_end_time">Select a ending time</string>
    <string name="dialog_filter_desc_temperature_filter">Enable temperature filter</string>
    <string name="dialog_filter_desc_date_filter">Enable date filter</string>
    <string name="display_label_descending">Descending</string>
    <string name="display_label_ascending">Ascending</string>
    <string name="btnEdit">Edit</string>
    <string name="dialog_editRow_title">Edit Data</string>
    <string name="dialog_editRow_hint_date">Enter date</string>
    <string name="dialog_editRow_hint_time">Enter time</string>
    <string name="dialog_editRow_hint_name">Enter name</string>
    <string name="dialog_editRow_hint_temperature">Enter temperature</string>
    <string name="dialog_editRow_hint_phone">Enter phone number</string>
    <string name="dialog_editRow_hint_review">Enter remark</string>
    <string name="dialog_editRow_btnUpdateData">Update Data</string>
</resources>