<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_changeProfile_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/dialog_changeProfile_title"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dialog_changeProfile_txtUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_changeProfile_username"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_changeProfile_etUsername"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_changeProfile_hint_username"
        android:importantForAutofill="no"
        android:inputType="textPersonName"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dialog_changeProfile_txtRecoveryEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_changeProfile_recovery_email"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_changeProfile_etRecoveryEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_changeProfile_hint_recovery_email"
        android:importantForAutofill="no"
        android:inputType="textEmailAddress"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:divider="?android:dividerHorizontal"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/dialog_changeProfile_btnUpdateProfile"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpdateProfile" />

        <Button
            android:id="@+id/dialog_changeProfile_btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancel" />
    </LinearLayout>

</LinearLayout>