<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginStart="16dp"
    android:layout_marginLeft="16dp"
    android:layout_marginEnd="16dp"
    android:layout_marginRight="16dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/dialog_changePassword_txtTitle"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:background="@color/dark_blue"
        android:gravity="center"
        android:padding="8dp"
        android:text="@string/dialog_changePassword_title"
        android:textColor="@color/white"
        android:textColorHighlight="@color/white"
        android:textSize="30sp" />

    <TextView
        android:id="@+id/dialog_changePassword_txtCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_changePassword_current_password"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_changePassword_etCurrentPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_changePassword_hint_current_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dialog_changePassword_txtNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_changePassword_new_password"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_changePassword_etNewPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_changePassword_hint_new_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <TextView
        android:id="@+id/dialog_changePassword_txtConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/dialog_changePassword_confirm_password"
        android:textColor="@color/light_blue"
        android:textSize="20sp" />

    <EditText
        android:id="@+id/dialog_changePassword_etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/dialog_changePassword_re_enter_password"
        android:importantForAutofill="no"
        android:inputType="textPassword"
        android:minHeight="48dp"
        tools:ignore="TextContrastCheck" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="24dp"
        android:divider="?android:dividerHorizontal"
        android:dividerPadding="8dp"
        android:orientation="horizontal"
        android:showDividers="middle">

        <Button
            android:id="@+id/dialog_changePassword_btnUpdatePassword"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnUpdatePassword" />

        <Button
            android:id="@+id/dialog_changePassword_btnCancel"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnCancel" />
    </LinearLayout>

</LinearLayout>